platform/deploy/infra/istio/security/peer-authentication-spire-system.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: spire-system-strict
  namespace: spire-system
spec:
  mtls:
    mode: STRICT
