platform/deploy/infra/istio/security/authz-default-deny.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default-deny
  namespace: spire-system
spec: {}
