platform/deploy/infra/istio/security/authz-denial-logging.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: log-denied-traffic
  namespace: istio-system
spec:
  action: DENY
  rules:
  - {}
